fixed a z-index bug at low-width screen for piano white key note

--- a/client/src/scenes/visualizer/pianoFretboard/styles.css
+++ b/client/src/scenes/visualizer/pianoFretboard/styles.css
@@ -65,6 +65,7 @@
     background:linear-gradient(45deg, #222 0%,#555 100%);
 
     max-height:141px;
+    
 }
 
 
@@ -74,7 +75,7 @@
     height: 27.5vw;
     height: 25vw;
     width: 7%;
-    z-index: 1;
+    /* z-index: 1; */
     border-left: 1px solid #bbb;
     border-bottom: 1px solid #bbb;
     box-shadow: -1px 0 0 rgba(255,255,255,0.8) inset, 0 0 5px #ccc inset, 0 0 3px rgba(0,0,0,0.2);
@@ -142,7 +143,9 @@
 
 }
 
-
+.key.white .note {
+    z-index: 100000000000000000000000000000;
+}
 
 .key.white .keyboardNote {
     position: absolute;
